# tracer

./: .clang-format  .lcovrc  LICENSE  Makefile  README.md  meson.build  tracer.hpp
assets/: trace.json
assets/linux-perf/: flamegraph.html  gecko_profile.json
lib/args/: meson.build
lib/args/include/: args.hpp
lib/args/tests/: meson.build  test.cpp
scripts/: launch-perf.sh  perfetto.sql
src/: cli_opts.hpp  main.cpp  meson.build  shared_msg.hpp  tracer.cpp
src/Args/: args.cpp  args.hpp  meson.build
src/Args/tests/: test.cpp
src/IPC/: _peeker.hpp  client.cpp  client.hpp  meson.build  message.cpp  message.hpp  server.cpp  server.hpp
src/IPC/tests/: client_test.cpp  common.hpp  common_args.hpp  common_message.hpp  message.hpp  server_test.cpp
src/Profiler/: chrome_event.cpp  chrome_event.hpp  chrome_json.hpp  file_exporter.hpp  macros.hpp  meson.build  profiler.hpp  serialization.hpp  trace.cpp  trace.hpp  trace_collector.cpp
src/Profiler/exporters/: exporter.hpp  file_exporter.cpp  file_exporter.hpp  ipc_exporter.cpp  ipc_exporter.hpp
src/Profiler/tests/: chrome_json_test.cpp  meson.build  profiler_pipe_test.cpp  profiler_test.cpp
src/TraceCollector/: args.hpp  events.hpp  main.cpp  meson.build
src/TraceCollector/tests/: profiler_file_test.cpp  profiler_pipe_test.cpp
tests/: chrome_json_test.cpp  client_test.cpp  meson.build  profiler_pipe_cpp17_test.cpp  profiler_test.cpp  server_test.cpp
tests/client_cpp14/: ipc.cpp  profiler.cpp
